objects/Portal_Manager_Roles__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Baseline_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Baseline Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GU_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GU Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GU_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GU Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gdemo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gdemo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPI_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KPI&apos;s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lab_Software__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lab Software</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Referral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MLB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MLB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Online_Directory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Online Directory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oppty_Reg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Oppty Reg</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PS_Discount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PS Discount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Portal_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Portal Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program_Guide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Program Guide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RFP_Tool__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP Tool</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rebate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revenue_Reporting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Reporting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_U_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales U Training</label>
        <type>Checkbox</type>
    </fields>
    <label>Portal Manager Roles</label>
</CustomObject>